# displayctl

./: .bumpversion.cfg  .gitignore  AUTOMATION_COMPLETE.md  CHANGELOG.md  MANIFEST.in  README.md  RELEASE_AUTOMATION.md  RELEASE_NOTES_v1.2.0.md  UVX_SUMMARY.md  UVX_USAGE.md  pyproject.toml  test_package.py
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml  version-bump.yml
src/displayctl/: __init__.py  __main__.py  cli.py
