[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "displayctl"
version = "1.0.0"
description = "Display Configuration Manager for GNOME"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DisplayCtl Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Gnome",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "dbus-python; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "build",
    "hatchling",
]

[project.urls]
Homepage = "https://github.com/example/displayctl"
Repository = "https://github.com/example/displayctl"
Issues = "https://github.com/example/displayctl/issues"

[project.scripts]
displayctl = "displayctl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/displayctl"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]
